app/k8s/s3-hello-world.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s3-hello-world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-hello-world
  namespace: s3-hello-world
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: "s3-hello-world"
  template:
    metadata:
      labels:
        app: s3-hello-world
    spec:
      volumes:
      - name: s3-hello-world
        configMap:
          name: s3-hello-world
      containers:
      - image: nginxdemos/hello
        imagePullPolicy: Always
        name: s3-webserver
        volumeMounts:
        - name: s3-hello-world
          mountPath: "/usr/share/nginx/html/index.html"
          readOnly: true
        ports:
        - containerPort: 80
      serviceAccountName: s3-hello-world
---
apiVersion: v1
kind: Service
metadata:
  name: s3-hello-world
  namespace: s3-hello-world
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: s3-hello-world
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s3-hello-world
  namespace: s3-hello-world
  annotations:
    kubernetes.io/ingress.class: "nginx-ben"
spec:
  rules:
  - host: ad60ee60a1bb44f6faf40fecba9baaa5-1486879597.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName: s3-hello-world
          servicePort: 80
